--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Setup Java JDK
         uses: actions/setup-java@v3.0.0
         with:
-          java-version: 17
+          java-version: '17'
           java-package: jdk+fx
           distribution: adopt
       
