--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,9 +23,8 @@ jobs:
       - name: Setup Java JDK
         uses: actions/setup-java@v3.0.0
         with:
+          distribution: 'temurin'
           java-version: '17'
-          java-package: jdk+fx
-          distribution: adopt
       
       - name: Run mvn install
         run: mvn install
