--- a/Model/pom.xml
+++ b/Model/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>krypto</artifactId>
-        <groupId>org.example</groupId>
+        <groupId>pl.lodz.p.it.krypto.aes</groupId>
+        <artifactId>AES</artifactId>
         <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
