--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,9 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.8.1</version>
+                    <configuration>
+                        <!-- <failOnWarning>true</failOnWarning> -->
+                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -111,7 +114,7 @@
                                             <limit>
                                                 <counter>COMPLEXITY</counter>
                                                 <value>COVEREDRATIO</value>
-                                                <!--<minimum>0.80</minimum>-->
+                                                <minimum>0.80</minimum>
                                             </limit>
                                         </limits>
                                     </rule>
